# Practice-Projects

./: .gitignore  README.md  pyproject.toml
Airbnb Listing Analysis/: README.md  main.ipynb
Baby Name Trends/: README.md
Baby Name Trends/Data/: create_baby_names_db.sql
Baby Name Trends/Scripts/: names_comparison.sql  popularity_historical_trends.sql  popularity_spatial_trends.sql  views.sql
Major Baseball League Insights/: README.md
Major Baseball League Insights/Analysis/: careers.sql  players.sql  salaries.sql  schools.sql
Major Baseball League Insights/Tables/: create_views.sql
Major Baseball League Insights/Visualization/: visualization.ipynb
Sales & Customer Analytics/: README.md
Sales & Customer Analytics/charts/: charts.ipynb
Sales & Customer Analytics/preparation/: .env.example  file_preparation.ipynb  import.py
Sales & Customer Analytics/sql scripts/: analysis.sql  customer_report.sql  eda.sql  products_report.sql  tables.sql
World Economic Report/: README.md  main.ipynb
